[tool.poetry]
name = "my-hw-6"
version = "0.1.0"
description = ""
authors = ["Dan Yunin <DaniilUnin2002@yandex.ru>"]
readme = "README.md"
packages = [{include = "hw_6"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
requests = "^2.28.1"
lxml = "^4.9.1"
wemake-python-styleguide = "^0.17.0"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
