[tool.poetry]
name = "7"
version = "0.1.0"
description = ""
authors = ["DanYunin <daniilunin2002@yandex.ru>"]
readme = "README.md"
packages = [{include = "hw_7"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
asyncio = "^3.4.3"
httpx = "^0.23.1"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
