[tool.poetry]
name = "hw6"
version = "0.1.0"
description = ""
authors = ["Namxobick <yurinsin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
requests = "^2.28.1"
wemake-python-styleguide = "^0.17.0"
httpx = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
