[tool.poetry]
name = "hw7"
version = "0.1.0"
description = ""
authors = ["Stepa123de(git)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.1"
loguru = "^0.6.0"
requests = "^2.28.1"
aiohttp = "^3.8.3"
asyncio = "^3.4.3"
aiofiles = "^22.1.0"
wemake-python-styleguide = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
