[tool.poetry]
name = "hw7"
version = "0.1.0"
description = ""
authors = ["Egor Tanin <sealynxxxx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
