[tool.poetry]
name = "simple parser"
version = "0.1.0"
description = ""
authors = ["Poletaev Timur"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
