[tool.poetry]
name = "my-awesome-script"
version = "0.1.0"
description = ""
authors = ["Anna <annakul41@mail.ru>"]
readme = "README.md"
packages = [{include = "my_awesome_script"}]

[tool.poetry.dependencies]
python = "^3.10"
wemake-python-styleguide = "^0.17.0"
pytz = "^2022.5"
cowpy = "^1.1.5"
argparse = "^1.4.0"
pygments = "^2.13.0"
cowsay = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-awesome-script = "my_awesome_script.__main__:main"