[tool.poetry]
name = "my-awesome-script"
version = "0.1.0"
description = ""
authors = ["CLleese <simeon.kozhin@gmail.com>"]
readme = "README.md"
packages = [{include = "my_awesome_script"}]

[tool.poetry.dependencies]
python = "^3.8"
pygments = "^2.13.0"
cowpy = "^1.1.5"
pytz = "^2022.4"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
safety = "^2.3.1"

[tool.poetry.scripts]
my-awesome-script = "my_awesome_script.my_awesome_script:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
