[tool.poetry]
name = "my-awesome-script"
version = "0.1.0"
description = ""
authors = ["Stepan Kashin <Stepa.kashin.2018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2022.4"
argparse = "^1.4.0"
pygments = "^2.13.0"
cowsay = "^5.0"
cowpy = "^1.1.5"


[tool.poetry.group.dev.dependencies]
safety = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
