[tool.poetry]
name = "my-awesome-script"
version = "0.1.0"
description = ""
authors = ["Namxobick <yurinsin@gmail.com>"]
readme = "README.md"
packages = [{include = "my_awesome_script"}]

[tool.poetry.dependencies]
python = "^3.10"
pygments = "^2.13.0"
argparse = "^1.4.0"
cowpy = "^1.1.5"
cowsay = "^5.0"
pytz = "^2022.4"
datetime = "^4.7"
wemake-python-styleguide = "^0.17.0"


[tool.poetry.group.dev.dependencies]
safety = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_awesome_script = "my_awesome_script.__main__:main"

